k8s-02/Ingress/k8s-02-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/acme-dns01-provider: cloudflare
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  name: k8s-02-ingress
  namespace: k8s-02
spec:
  rules:
  - host: 02.k8s.klaus.onl
    http:
      paths:
      - backend:
          serviceName: k8s-02-svc
          servicePort: 80
  tls:
  - hosts:
    - 02.k8s.klaus.onl
    secretName: k8s-02-wp-tls
